--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,8 +120,8 @@ body{
     width: 456px;
     line-height: 56px;
     text-align: center;
-    background-color: #ccc;
-    border: 1px solid #cccc;
+    background-color: #f1f1f1;
+    border-top: 1px solid #cccc;
 }
 .option__basic__info__first{
     width: 460px;
@@ -138,4 +138,76 @@ body{
     color: #fff;
     font-size: 25px;
     text-align: center;
+}
+.option p{
+    color: rgba(0,0,0,0.4);
+}
+.option h2{
+    font-weight: 500;
+    font-size: 30px;
+}
+.option__basic__info__last,.option__pro__info__last{
+    height: 100px;
+    display: flex;
+}
+.option__basic__info__last a{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    line-height: 50px;
+    width: 100px;
+    background-color: #fff;
+    margin: auto;
+}
+.option__pro__info__last a{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    line-height: 50px;
+    width: 100px;
+    background-color:#f44336;
+    margin: auto;
+}
+.option a:hover{
+    background-color: black;
+    color: white;
+}
+.form label{
+    display: block;
+}
+.form input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    overflow: visible;
+    padding: 8px;
+}
+.contact__btn{
+    width: 100%;
+    line-height: 45px;
+    color: white;
+    background-color: #f44336;
+    border: none;
+    font-size: 17px;
+    cursor: pointer;
+}
+.contact__btn:hover{
+    background-color: #ccc;
+    color: black;
+}
+.part5{
+    margin-bottom: 100px;
+}
+footer{
+    position: relative;
+    height: 100px;
+}
+.license{
+    position: absolute;
+    top: 50%;
+    right: 0;
+}
+.license p{
+    display: inline-block;
 }
